--- a/home.hbs
+++ b/home.hbs
@@ -1,5 +1,13 @@
 {{!< default}}
 
+<div class="container medium">
+    <div class="" style="display:flex;justify-content:center;text-align:center;">
+        <h2 class="" style="font-weight: bold; font-size: 2em;">
+            Chicano Culture SB Archive
+            </h2>
+    </div>
+            <hr>
+</div>
 <div class="content-area">
     <main class="site-main">
         <div class="post-feed expanded container medium">
