removed date published from archive posts... well, from all posts. Will have to make a new feed template for non-archive blog/etc posts later

--- a/partials/content.hbs
+++ b/partials/content.hbs
@@ -3,9 +3,9 @@
         {{#is "post"}}
             <div class="single-meta">
                 <span class="single-meta-item single-meta-date">
-                    <time datetime="{{date format="YYYY-MM-DD"}}">
+                 <!--   <time datetime="{{date format="YYYY-MM-DD"}}">
                         {{date published_at}}
-                    </time>
+                    </time> -->
                 </span>
 
                 <span class="single-meta-item single-meta-length">
