--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -1,10 +1,10 @@
 <article class="feed {{post_class}}" data-month="{{date format="MMMM YYYY"}}">
     <div class="feed-calendar">
         <div class="feed-calendar-month">
-            {{date published_at format="MMM"}}
+        <!--    {{date published_at format="MMM"}} -->
         </div>
         <div class="feed-calendar-day">
-            {{date published_at format="DD"}}
+         <!--   {{date published_at format="DD"}}  -->
         </div>
     </div>
     <div class="feed-image u-placeholder rectangle">
@@ -23,7 +23,7 @@
         {{/if}}
         <div class="feed-right">
             <time class="feed-date" datetime="{{date format="YYYY-MM-DD"}}">
-                {{date published_at}}
+           <!--     {{date published_at}}  -->
             </time>
             <div class="feed-visibility feed-visibility-{{visibility}}">
                 {{> icons/star}}
